build: Add lastModified to file states and store hash as UUID-String
BREAKING-CHANGE: FileState serde is incompatible to old serialized data